--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <div class="main">
       <div id="container">
         <h1>Tic Tac Toe</h1>
+        <div id="input">
+          <label for="player1">Player 1 Name</label>
+          <input type="text" name="player1" id="player1" />
+
+          <label for="player2">Player 2 Name</label>
+          <input type="text" name="player2" id="player2" />
+          <input type="submit" id="inputPlayer" value="Start" />
+        </div>
         <div id="cells">
           <div class="cell"></div>
           <div class="cell"></div>
